--- a/web/style.css
+++ b/web/style.css
@@ -317,6 +317,7 @@ div input[type="text"]:focus {
 	font-family: Arial, Helvetica, sans-serif;
 	cursor: pointer;
 	margin: 12px 0px;
+	border: none;
 	transition: all 0.2s ease 0s;
 }
 
